hphp/hack/test/typecheck/test_consts14.php.exp
File "test_consts14.php", line 4, characters 9-11:
Expected int (Typing[4348])
File "test_consts14.php", line 10, characters 9-14:
But got string
